--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
-POSTGRES_HOST=
+APP_SECRET_KEY=
+
+# Database connection
+POSTGRES_HOST=localhost
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_PORT=5432
-POSTGRES_DB=
+POSTGRES_DB_NAME=payprotectdb
 
-APP_SECRET_KEY=
+# MAIL settings
+EMAIL_HOST=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_PORT=2525
+DEFAULT_FROM_EMAIL=${EMAIL_HOST_USER}
