--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ drf-spectacular==0.27.2
 drf-spectacular-sidecar==2024.7.1
 python-dotenv~=1.0.1
 django-cors-headers==4.4.0
-djoser~=2.2.3
 mysqlclient==2.2.4
+drf-social-oauth2==3.1.0
+djangorestframework-simplejwt==5.3.1
