add user features

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,15 @@ EMAIL_PORT=2525
 DEFAULT_FROM_EMAIL=${EMAIL_HOST_USER}
 
 APP_URL=http://localhost:8000
+
+# Facebook configuration
+SOCIAL_AUTH_FACEBOOK_KEY='your app id goes here>'
+SOCIAL_AUTH_FACEBOOK_SECRET='<your app secret goes here>'
+
+# Google configuration
+SOCIAL_AUTH_GOOGLE_OAUTH2_KEY='your app id goes here>'
+SOCIAL_AUTH_GOOGLE_OAUTH2_SECRET='<your app secret goes here>'
+
+# Instagram configuration
+SOCIAL_AUTH_INSTAGRAM_KEY='<your app id goes here>'
+SOCIAL_AUTH_INSTAGRAM_SECRET='<your app secret goes here>'
